rancher-yaml/ingress-https.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-app-ingress
  namespace: awesome
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

    # standard timeouts / body size
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - awesome.dev.local
      secretName: awesome-tls
  rules:
    - host: awesome.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awesome-app
                port:
                  number: 3000
